--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
     }
   ],
   "require": {
-    "php": ">=7.1.0",
-    "box/spout": "~3",
+    "php": ">=7.2.0",
+    "openspout/openspout": "~3",
     "league/flysystem": "~1|~2|~3"
   },
   "require-dev": {
