--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
   "require": {
     "php": ">=7.2.0",
     "openspout/openspout": "v3.7.4",
-    "league/flysystem": "~1|~2|~3"
+    "league/flysystem": "^2.5"
   },
   "require-dev": {
     "phpunit/phpunit": "~7|~8.0",
